Fix reference whitespace issues for good.
(Hopefully)

--- a/packages/core/src/css/alignment.less
+++ b/packages/core/src/css/alignment.less
@@ -27,10 +27,6 @@
     display: block;
   }
 
-  .e-table-cell {
-    display: table-cell;
-  }
-
   .e-inline {
     display: inline;
   }
